--- a/cyborg/bootswatch.less
+++ b/cyborg/bootswatch.less
@@ -49,39 +49,64 @@ body {
 // NAVBAR
 // -----------------------------------------------------
 
-.navbar-inner {
-  .border-radius(0);
-  .box-shadow(none);
-  border-bottom: 2px solid @blue
-}
+.navbar {
+	
+	.navbar-inner {
+	  .border-radius(0);
+	  .box-shadow(none);
+	  border-bottom: 2px solid @blue
+	}
+	
+	.brand {
+		padding: 12px 20px 8px;
+		
+		&:hover {
+				border-bottom: 3px solid @blue
+		}
+	}
+	
+	.nav li > a {
+		padding: 13px 10px 8px;
+		border-bottom: 3px solid rgba(0, 0, 0, 0);
+		border-left: 1px solid #222;
+		
+		&:hover {
+			border-bottom: 3px solid @blue
+		}
+	}
+	
+	.nav .active > a {
+		border-bottom: 3px solid @blue
+	}
+	
+	.search-query,
+	.search-query:focus,
+	.search-query.focused {
+		color: @grayLight;
+		text-shadow: none;
+		background-color: #222;
+		.border-radius(1px);
+		.placeholder(@gray);
+	}	
+	
+	.nav li.dropdown.active.open .dropdown-toggle:hover {
+		border-bottom: 3px solid @blue;
+		border-left: 1px solid #222;
+	}
+	
+	.dropdown-menu::before,
+	.dropdown-menu::after {
+		display: none;
+	}
 
-.navbar .brand {
-	padding: 12px 20px 8px;
-}
+	.nav-collapse.in .nav > li > a {
+		border-left: 0;
+	}
 
-.navbar .nav li > a {
-	padding: 13px 10px 8px;
-	border-bottom: 3px solid rgba(0, 0, 0, 0);
-}
+	.nav-collapse.in .nav a:hover {
+		background-color: @blue;
+	}
 
-.navbar .nav .active > a,
-.navbar .nav li > a:hover,
-.navbar .brand:hover {
-	border-bottom: 3px solid @blue
-}
-
-.navbar .search-query,
-.navbar .search-query:focus,
-.navbar .search-query.focused {
-	color: @grayLight;
-	text-shadow: none;
-	background-color: #222;
-	.border-radius(1px);
-	.placeholder(@gray);
-}
-
-.navbar .nav > li > a {
-	border-left: 1px solid #222;
 }
 
 .dropdown-menu {
@@ -100,66 +125,51 @@ body {
 	border-bottom: 0px solid white;
 }
 
-.navbar .dropdown-menu::before,
-.navbar .dropdown-menu::after {
-	display: none;
-}
-
-.navbar .nav-collapse.in .nav > li > a {
-	border-left: 0;
-}
-
-.navbar .nav-collapse.in .nav a:hover {
-	background-color: @blue;
-}
-
 div.subnav {
 	position: static;
 	background-color: @grayDarker;
 	background-image: none;
 	border: 0;
-}
+	
+	
+	&.subnav-fixed {
+		position: relative;
+		left: -1px;
+		top: auto;
+	}
 
-div.subnav.subnav-fixed {
-	position: relative;
-	left: -1px;
-	top: auto;
-}
+	.nav > li > a,
+	.nav .active a {
+		background-color: @grayDarker;
+		border-left: 1px solid #222;
+		border-right: 0;
+		color: @grayLighter;
+	}
 
-div.subnav .nav > li > a,
-div.subnav .nav .active a {
-	background-color: @grayDarker;
-	border-left: 1px solid #222;
-	border-right: 0;
-	color: @grayLighter;
-}
+	.nav li.nav-header {
+		text-shadow: none;
+	}
 
-div.subnav .nav li.nav-header {
-	text-shadow: none;
-}
-
-.subnav .nav > li > a:hover,
-.subnav .nav > li.active > a:hover,
-.subnav .nav > li:first-child > a:hover {
-	background: transparent;
-	border-bottom: 2px solid @blue;
-	border-left: 1px solid #222;
-	color: @white;
-}
-
-div.subnav .nav .open {
-
-	.dropdown-toggle {
+	.nav > li > a:hover,
+	.nav > li.active > a:hover,
+	.nav > li:first-child > a:hover {
+		background: transparent;
+		border-bottom: 2px solid @blue;
+		border-left: 1px solid #222;
+		color: @white;
+	}
+	
+	.nav .open .dropdown-toggle {
 		border: 0;
 		border-left: 1px solid #222;
 	    border-bottom: 2px solid @blue;
 		background-color: #060606;
 	}
-
-	.dropdown-menu {
+	
+	.nav .open .dropdown-menu {
 		background-color: @grayDarker;
 		border-left: solid 1px rgba(255, 255, 255, 0.1);
-		
+
 		li > a:hover {
 			border-bottom: 0;
 			background: @blue;
